# milky-frog-lite

./: .env.example  .gitignore  .ignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  milky-frog.json  pyproject.toml  run_tests.sh
.codegraph/: codegraph.db
.github/workflows/: ci.yml
.milky-frog/: config.toml
assets/: _part1_arrays.py  _part2_linked.py  _part4_dp_strings.py  algo_answer.py  algo_bounds.py  algo_rotated.py  algo_standard.py  new.py
docs/: ARCHITECTURE.md
docs/adr/: 0001-own-a-linear-agent-harness.md  0002-use-an-append-only-event-log-for-checkpoints.md  0003-start-with-a-policy-based-local-sandbox.md  0004-use-typed-event-handlers.md  0005-keep-skills-declarative-and-non-executable.md  0006-separate-human-output-by-stream.md  0007-account-tokens-as-cumulative-and-context.md  0008-compose-handlers-via-providers-with-lifetime.md  0009-resume-runs-by-folding-the-checkpoint-log.md  0010-continue-a-run-with-a-new-user-turn.md  0011-steer-an-active-run-via-a-background-stdin-channel.md  0012-shrink-handler-registry-to-a-read-only-lifecycle-bus.md  0013-handler-design.md  0013-type-checkpoint-events-as-a-pydantic-discriminated-union.md  0014-persist-checkpoints-as-runstate-snapshots.md  0015-centralize-handler-assembly-in-default-handlers.md  0016-unify-command-env-into-sandbox.md  0016-unify-sandbox-and-command-env-into-execution-backend.md  0017-skill-catalog-redesign.md  0018-subagent-worktree-isolation.md  README.md
docs/evals/: read-noise-pilot-design.md  read-noise-problem.md
docs/specs/: 2026-07-11-notebooklm-design.md  2026-07-12-subagent-worktree-prior-art.md
evals/: __init__.py  _settings.py  mine_change_tasks.py  read_collector.py  review_tasks.py  run_eval.py  run_skill_eval.py  scoring.py  test_read_collector.py  test_read_noise_sample.py  test_read_noise_schema.py  test_read_noise_score.py  test_run_eval.py  test_scoring.py  tool_collector.py
evals/datasets/: change_tasks.json  change_tasks_hard.json  read_noise_tasks.json  skill_recognition.json
evals/read_noise/: __init__.py  run.py  sample.py  schema.py  score.py
evals/results/: latest-hard.json  latest.json  read_noise_ab_baseline.json  read_noise_ab_edit_diff.json  read_noise_runs.json  read_noise_scores.json
notebooks/: verify_token_counting.ipynb
src/milky_frog/: __init__.py  __main__.py  agent_session.py  defer.py  diagnostics.py  domain.py  foreground.py  project.py  runtime.py  settings.py  steering.py
tests/: checkpoint_helpers.py  stubs.py  test_agent_session.py  test_assembly.py  test_builtin_tools.py  test_checkpoint.py  test_cli.py  test_defer.py  test_factory.py  test_handlers.py  test_harness.py  test_interactive.py  test_langfuse.py  test_models.py  test_project.py  test_runtime.py  test_sandbox.py  test_settings.py  test_shutdown.py  test_skills.py  test_steering.py  test_ui.py  test_usage.py
tests/adapters/: test_docker_sandbox.py
(+301 files in other folders)
