[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milky-frog"
version = "0.1.0"
description = "A lightweight local coding agent CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "langfuse>=4.9.1",
  "openai>=1.68.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "textual>=8.2.7",
  "typer>=0.15.0",
]

[tool.pyrefly.errors]
redundant-cast = "warn"

[project.optional-dependencies]
# Exact token counting per provider. Core never imports these; the adapter
# loads them lazily and degrades to the approximate counter when absent.
openai-tokenizer = ["tiktoken>=0.8"]
deepseek-tokenizer = ["tokenizers>=0.20"]

[project.scripts]
milky-frog = "milky_frog.cli:app"
mf = "milky_frog.cli:app"

[dependency-groups]
dev = [
  "pyrefly>=1.1.1",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.11.0",
  "types-pyyaml>=6.0.12.20250516",
]

[tool.hatch.build.targets.wheel]
packages = ["src/milky_frog"]

[tool.pytest.ini_options]
addopts = "-q --cov=milky_frog --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
  "src/milky_frog/__main__.py",
  "src/milky_frog/cli/*",
  "src/milky_frog/tui/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Exploratory notebooks are not held to source lint/format rules (and contain
# intentional CJK punctuation that RUF001 would otherwise flag).
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyrefly]
project-includes = ["src/milky_frog/**/*.py*"]
search-path = ["src"]
python-version = "3.12.0"
preset = "strict"
ignore-missing-imports = [
    "tiktoken",
    "tokenizers",
]
